syntax = "proto3";

package Inventory;



message Intailise_Inventory {
  string product_id = 1;
  string name = 2;
  string status = 3;
}