syntax = "proto3";

package inventory;


message InventoryItem{
    int32 id = 1;
    string product_id = 2;
    string  name = 3 ;
    int32 quantity = 4;
    string status = 5;
}
